experimental/ir/testdata/fields/reserved.proto.stderr.txt
error: duplicated reserved name foo
  --> testdata/fields/reserved.proto:21:21
   |
21 |   reserved "valid", "foo", "foo", "bar";
   |                     ^^^^^  ----- `foo` also reserved here

error: duplicated reserved name bar
  --> testdata/fields/reserved.proto:21:35
   |
21 |   reserved "valid", "foo", "foo", "bar";
   |                                   ^^^^^
22 |   reserved "bar";
   |            ----- `bar` also reserved here

error: duplicated reserved name foo
  --> testdata/fields/reserved.proto:26:21
   |
26 |   reserved "valid", "foo", "foo", "bar";
   |                     ^^^^^  ----- `foo` also reserved here

error: duplicated reserved name bar
  --> testdata/fields/reserved.proto:26:35
   |
26 |   reserved "valid", "foo", "foo", "bar";
   |                                   ^^^^^
27 |   reserved "bar";
   |            ----- `bar` also reserved here

encountered 4 errors
